syntax = "proto3";
package overgivechain.delivery.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "overgivechain/delivery/v1/params.proto";
import "overgivechain/delivery/v1/delivery.proto";

option go_package = "overgive-chain/x/delivery/types";

// Query defines the gRPC querier service.
service Query {
  // Get Delivery By ID
   rpc Delivery(QueryGetDeliveryRequest)
      returns (QueryGetDeliveryResponse) {
    option (google.api.http).get =
      "/overgive/delivery/{id}";
  }

  // Get Delivery By ID
  rpc DeliveryByHash(QueryDeliveryByHashRequest)
      returns (QueryDeliveryByHashResponse) {
    option (google.api.http).get =
      "/overgive/delivery/hash/{delivery_hash}";
  }
}

// Request for Get Delivery By ID
message QueryGetDeliveryRequest {
  uint64 id = 1;
}

// Response for Get Delivery By ID
message QueryGetDeliveryResponse {
  Delivery delivery = 1;
}

// Request for Get Delivery By Hash
message QueryDeliveryByHashRequest {
  string delivery_hash = 1;
}

// Response for Get Delivery By Hash
message QueryDeliveryByHashResponse {
  Delivery delivery = 1;
}